--- a/packages/external-db-airtable/package.json
+++ b/packages/external-db-airtable/package.json
@@ -1,6 +1,6 @@
 {
   "name": "external-db-airtable",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "description": "> TODO: description",
   "author": "Noam Almog <noama@wix.com>",
   "homepage": "https://github.com/wix-private/noam-external-db-poc#readme",
@@ -29,13 +29,12 @@
     "airtable": "^0.11.2",
     "axios": "^0.26.0",
     "express": "^4.17.3",
-    "velo-external-db-commons": "^0.0.0"
+    "velo-external-db-commons": "^1.0.1"
   },
   "devDependencies": {
     "chance": "^1.1.8",
     "jest": "^27.5.1",
-    "test-commons": "^0.0.0",
-
-    "jest-when": "^3.5.1"
+    "jest-when": "^3.5.1",
+    "test-commons": "^1.0.1"
   }
 }
