--- a/packages/external-db-security/package.json
+++ b/packages/external-db-security/package.json
@@ -1,6 +1,6 @@
 {
   "name": "external-db-security",
-  "version": "0.0.0",
+  "version": "1.0.1",
   "description": "> external-db-security",
   "homepage": "https://github.com/wix-private/noam-external-db-poc#readme",
   "license": "ISC",
@@ -28,13 +28,13 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "passport-oauth2": "^1.6.1",
-    "velo-external-db-commons": "^0.0.0"
+    "velo-external-db-commons": "^1.0.1"
   },
   "devDependencies": {
-    "test-commons": "^0.0.0",
     "chance": "^1.1.8",
     "jest": "^27.5.1",
     "jest-each": "^27.4.6",
-    "jest-when": "^3.5.1"
+    "jest-when": "^3.5.1",
+    "test-commons": "^1.0.1"
   }
 }
